KAN-6 save all the food details request to food table